--- a/index.html
+++ b/index.html
@@ -223,9 +223,4 @@
                 alert("Link Copy Karein: " + finalLink);
             }
         }
-    </script>
-</body>
-</html>
-
-
-<script src="https://pilesteroidprogramming.com/f1/31/50/f1315013947fc1f6fe827ebc6a7cab7a.js"></script>
+    <script src="https://pl28470250.effectivegatecpm.com/fc/68/00/fc6800c0a12688ce9721c5f2fa8867d8.js"></script>
